@@ -74,4 +74,4 @@
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "0.0.6"
+#define VERSION "0.0.7"
